updated styles with media breaks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<li class="pusher"></li>
 			<li>
 					<div>
-						<img src="https://farm3.staticflickr.com/2878/10944255073_973d2cd25c.jpg" alt=""/>
+						<img src="https://cdn.shopify.com/s/files/1/1016/8373/products/NavyChino-120_grande.png?v=1480358440" alt=""/>
 						<h1>This is a title a bit longer</h1>
 						<p>Some sample text about the article this hexagon leads to</p>
 				</div>
