--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 		<ul id="categories" class="clr">
 			<li class="pusher"></li>
 			<li>
-					<div>
-						<img src="https://cdn.shopify.com/s/files/1/1016/8373/products/NavyChino-120_grande.png?v=1480358440" alt=""/>
-						<h1>This is a title a bit longer</h1>
-						<p>Some sample text about the article this hexagon leads to</p>
-				</div>
-			</li>
-				<li>
-					<div>
-						<img src="https://farm9.staticflickr.com/8461/8048823381_0fbc2d8efb.jpg" alt=""/>
-						<h1>This is a title</h1>
-						<p>Some sample text about the article this hexagon leads to</p>
+				<div>
+					<a href="http://www.saint.cc/denim/denim-unbreakable" target="_blank">
+						<img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-15/e35/13561573_1758917591059473_1834938425_n.jpg" alt=""/>
+					</a>
+					<h1>Saint Unbreakable</h1>
+					<p>Single-layer motorcycle denim with Dyneema</p>
 				</div>
 			</li>
 			<li>
-					<div>
-						<img src="https://farm5.staticflickr.com/4144/5053682635_b348b24698.jpg" alt=""/>
-						<h1>This is a title</h1>
-						<p>Some sample text about the article this hexagon leads to</p>
+				<div>
+					<img src="https://farm9.staticflickr.com/8461/8048823381_0fbc2d8efb.jpg" alt=""/>
+					<h1>This is a title</h1>
+					<p>Some sample text about the article this hexagon leads to</p>
+				</div>
+			</li>
+			<li>
+				<div>
+					<img src="https://farm5.staticflickr.com/4144/5053682635_b348b24698.jpg" alt=""/>
+					<h1>This is a title</h1>
+					<p>Some sample text about the article this hexagon leads to</p>
 				</div>
 			</li>
 			<li>
