--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<li class="pusher"></li>
 			<li>
 					<div>
-						<img src="https://cdn.shopify.com/s/files/1/1016/8373/products/NavyChino-120_grande.png?v=1480358440" alt=""/>
+						<a class="overlay" href="http://google.com" target="_blank"></a>
+						<img src="http://demandware.edgesuite.net/sits_pod40/dw/image/v2/BBCF_PRD/on/demandware.static/-/Sites-chrome_catalog_master/default/dw3508e8ba/product-images/BG-002/NITE/1_BG-002_NITE.jpg?sw=1000&sh=1000&sm=fit" alt=""/>
 						<h1>This is a title a bit longer</h1>
 						<p>Some sample text about the article this hexagon leads to</p>
 				</div>
