Web app version pointing to Google Spreadsheet

--- a/test/index.html
+++ b/test/index.html
@@ -9,8 +9,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,800italic,400,700,800' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,300,200,100,900' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css" />
+		<link rel="stylesheet" type="text/css" href="style.css">
 		
 		
 	</head>
@@ -30,7 +30,7 @@
 				<input id="nav-button" class="menu-icon" type="checkbox" for="nav">
 			</div>
 		</div>
-		<div id="nav" class="dropdown-pane">
+		<div id="nav">
 			<div class="switchbox">
 				<p>Bags</p>
 				<div class="switch">
@@ -83,6 +83,9 @@
 		<ul class="hex-grid clr" id="hex">
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.saint.cc" target="_blank"></a>
 					<img src="../static/clothing_saint.jpg" alt=""/>
 					<h1>Saint Unbreakable</h1>
@@ -92,6 +95,9 @@
 			<li class="pusher"></li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://shop.outlier.nyc/shop/retail/objects/" target="_blank"></a>
 					<img src="../static/bags_outlier.jpg" alt=""/>
 					<h1>Outlier</h1>
@@ -100,6 +106,9 @@
 			</li>
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://ministryofsupply.com/" target="_blank"></a>
 					<img src="../static/clothing_ministry_of_supply.jpg" alt=""/>
 					<h1>Ministry of Supply</h1>
@@ -108,6 +117,9 @@
 			</li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://missionworkshop.com/collections/bags" target="_blank"></a>
 					<img src="../static/bags_mission_workshop.jpg" alt=""/>
 					<h1>Mission Workshop</h1>
@@ -116,7 +128,10 @@
 			</li>
 			<li class="pusher"></li>
 			<li class="bags">
-				<div class="">
+				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.chromeindustries.com/bags/all/" target="_blank"></a>
 					<img src="../static/bags_chrome.jpg" alt=""/>
 					<h1>Chrome</h1>
@@ -125,48 +140,9 @@
 			</li>
 			<li class="clothing">
 				<div>
-					<a href="http://www.saint.cc" target="_blank"></a>
-					<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t31.0-8/16177652_1184504721618652_1345025059338018737_o.jpg?oh=17ee8c128cabcb24e684db458d761682&oe=590127E3" alt=""/>
-					<h1>Saint Unbreakable</h1>
-					<p>Single-layer motorcycle denim with Dyneema</p>
-				</div>
-			</li>
-			<li class="pusher"></li>
-			<li class="bags">
-				<div>
-					<a href="http://shop.outlier.nyc/shop/retail/objects/" target="_blank"></a>
-					<img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-15/e35/12912486_877709045689690_1460266061_n.jpg?ig_cache_key=MTIyMjY3NzkxMDIwNTQyMzIzOQ%3D%3D.2" alt=""/>
-					<h1>Outlier</h1>
-					<p>Fashionably minimalist Dyneema Composite bags</p>
-				</div>
-			</li>
-			<li class="clothing">
-				<div>
-					<a href="https://ministryofsupply.com/" target="_blank"></a>
-					<img src="https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/15326522_1134747873261004_1469699003255896020_n.jpg?oh=b454dab5a6b262754bda2211eed9f286&oe=590805B9" alt=""/>
-					<h1>Ministry of Supply</h1>
-					<p>Smart clothing that performs beyond every expectation</p>
-				</div>
-			</li>
-			<li class="bags">
-				<div>
-					<a href="https://missionworkshop.com/collections/bags" target="_blank"></a>
-					<img src="https://cdn.shopify.com/s/files/1/0085/1682/products/11834-2015_1174_2048x2048.jpg?v=1471562900" alt=""/>
-					<h1>Mission Workshop</h1>
-					<p>Upscale and tough urban cycling gear</p>
-				</div>
-			</li>
-			<li class="pusher"></li>
-			<li class="bags">
-				<div class="">
-					<a href="http://www.chromeindustries.com/bags/all/" target="_blank"></a>
-					<img src="../static/bags_chrome.jpg" alt=""/>
-					<h1>Chrome</h1>
-					<p>Durable, timeless bags for urban cyclists</p>
-				</div>
-			</li>
-			<li class="clothing">
-				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.saint.cc" target="_blank"></a>
 					<img src="../static/clothing_saint.jpg" alt=""/>
 					<h1>Saint Unbreakable</h1>
@@ -176,6 +152,9 @@
 			<li class="pusher"></li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://shop.outlier.nyc/shop/retail/objects/" target="_blank"></a>
 					<img src="../static/bags_outlier.jpg" alt=""/>
 					<h1>Outlier</h1>
@@ -184,6 +163,9 @@
 			</li>
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://ministryofsupply.com/" target="_blank"></a>
 					<img src="../static/clothing_ministry_of_supply.jpg" alt=""/>
 					<h1>Ministry of Supply</h1>
@@ -192,6 +174,9 @@
 			</li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://missionworkshop.com/collections/bags" target="_blank"></a>
 					<img src="../static/bags_mission_workshop.jpg" alt=""/>
 					<h1>Mission Workshop</h1>
@@ -200,7 +185,10 @@
 			</li>
 			<li class="pusher"></li>
 			<li class="bags">
-				<div class="">
+				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.chromeindustries.com/bags/all/" target="_blank"></a>
 					<img src="../static/bags_chrome.jpg" alt=""/>
 					<h1>Chrome</h1>
@@ -209,6 +197,9 @@
 			</li>
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.saint.cc" target="_blank"></a>
 					<img src="../static/clothing_saint.jpg" alt=""/>
 					<h1>Saint Unbreakable</h1>
@@ -218,6 +209,9 @@
 			<li class="pusher"></li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://shop.outlier.nyc/shop/retail/objects/" target="_blank"></a>
 					<img src="../static/bags_outlier.jpg" alt=""/>
 					<h1>Outlier</h1>
@@ -226,6 +220,9 @@
 			</li>
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://ministryofsupply.com/" target="_blank"></a>
 					<img src="../static/clothing_ministry_of_supply.jpg" alt=""/>
 					<h1>Ministry of Supply</h1>
@@ -234,6 +231,9 @@
 			</li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://missionworkshop.com/collections/bags" target="_blank"></a>
 					<img src="../static/bags_mission_workshop.jpg" alt=""/>
 					<h1>Mission Workshop</h1>
@@ -242,7 +242,10 @@
 			</li>
 			<li class="pusher"></li>
 			<li class="bags">
-				<div class="">
+				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.chromeindustries.com/bags/all/" target="_blank"></a>
 					<img src="../static/bags_chrome.jpg" alt=""/>
 					<h1>Chrome</h1>
@@ -251,6 +254,9 @@
 			</li>
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.saint.cc" target="_blank"></a>
 					<img src="../static/clothing_saint.jpg" alt=""/>
 					<h1>Saint Unbreakable</h1>
@@ -260,6 +266,9 @@
 			<li class="pusher"></li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://shop.outlier.nyc/shop/retail/objects/" target="_blank"></a>
 					<img src="../static/bags_outlier.jpg" alt=""/>
 					<h1>Outlier</h1>
@@ -268,6 +277,9 @@
 			</li>
 			<li class="clothing">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://ministryofsupply.com/" target="_blank"></a>
 					<img src="../static/clothing_ministry_of_supply.jpg" alt=""/>
 					<h1>Ministry of Supply</h1>
@@ -276,6 +288,9 @@
 			</li>
 			<li class="bags">
 				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="https://missionworkshop.com/collections/bags" target="_blank"></a>
 					<img src="../static/bags_mission_workshop.jpg" alt=""/>
 					<h1>Mission Workshop</h1>
@@ -284,7 +299,10 @@
 			</li>
 			<li class="pusher"></li>
 			<li class="bags">
-				<div class="">
+				<div>
+					<div class="border1 hex-border"></div>
+					<div class="border2 hex-border"></div>
+					<div class="border3 hex-border"></div>
 					<a href="http://www.chromeindustries.com/bags/all/" target="_blank"></a>
 					<img src="../static/bags_chrome.jpg" alt=""/>
 					<h1>Chrome</h1>
