--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>Weger Hex</title>
 		<link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,800italic,400,700,800' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,700,300,200,100,900' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Amatic" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		
@@ -82,7 +82,7 @@
 		
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="scripts.js"></script>
-		<script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
 		<script>
 		  $(document).foundation();
 		</script>
