--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>Weger Hex</title>
 		<link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Amatic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		
